--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
 	id 'maven-publish'
 	id "com.modrinth.minotaur" version "2.+"
 }
-import com.modrinth.minotaur.dependencies.ModDependency
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
@@ -68,7 +67,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 17 as Property<Integer>
 }
 
 java {
@@ -104,7 +103,4 @@ modrinth {
 	uploadFile = remapJar // Tells Minotaur to use the remapped jar
 	gameVersions = ['1.19.3'] // An array of game versions the version supports
 	loaders = ['fabric'] // Self-explanatory.
-	dependencies = [
-			new ModDependency('P7dR8mSH', 'required') // Creates a new required dependency on Fabric API
-	]
 }
