--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17 as Property<Integer>
+	it.options.release = 17
 }
 
 java {
